# libosmocore

./: Makefile.am  README.md  configure.ac  libosmocodec.pc.in  libosmocoding.pc.in  libosmocore.pc.in  libosmoctrl.pc.in  libosmogb.pc.in  libosmogsm.pc.in  libosmomslookup.pc.in  libosmosim.pc.in  libosmousb.pc.in  libosmovty.pc.in
contrib/: new_fsm.py
debian/: control  libosmocore-utils.install  libosmomslookup0.install  rules
include/: Makefile.am
src/: Makefile.am  application.c  context.c  exec.c  it_msgq.c  it_q.c  logging.c  select.c  sockaddr_str.c  socket.c  utils.c
src/codec/: Makefile.am  frame_relay.c
src/coding/: gsm0503_interleaving.c
src/gb/: Makefile.am  frame_relay.c  gprs_bssgp.c  gprs_ns2.c  gprs_ns2_fr.c  gprs_ns2_internal.h  gprs_ns2_udp.c  gprs_ns2_vty.c  libosmogb.map
src/gsm/: Makefile.am  auth_xor.c  gsm0808.c  gsup.c  lapd_core.c  libosmogsm.map  rsl.c
src/mslookup/: Makefile.am  mdns.c  mdns_internal.h  mdns_msg.c  mdns_msg.h  mdns_record.c  mdns_record.h  mdns_rfc.c  mdns_rfc.h  mdns_sock.c  mslookup.c  mslookup_client.c  mslookup_client_fake.c  mslookup_client_mdns.c  mslookup_client_simple_api.c
src/vty/: logging_vty.c  telnet_interface.c
tapset/: libosmocore.stp
tests/: Makefile.am  atlocal.in  testsuite.at
tests/exec/: exec_test.c
tests/gsm0408/: gsm0408_test.c
tests/it_q/: it_q_test.c
tests/logging/: logging_vty_test.c  logging_vty_test.vty
tests/mslookup/: mdns_test.c  mdns_test.err  (+7 more)
utils/: Makefile.am  osmo-gsm-shark  osmo-mslookup-client.c  osmo-mslookup-pipe.py  osmo-mslookup-socket.py  osmo-sim-test.c
(+22 files in other folders)
